# ai-chatbot

./: LICENSE  README.md
backend/: .env.local  .gitignore  LICENSE  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup_rag.py  test_rag.py
backend/.github/workflows/: test.yml
backend/apps/: __init__.py
backend/apps/adapters/: README.md  __init__.py
backend/apps/adapters/embeddings/: README.md  __init__.py  fake.py  (+1 more)
backend/apps/chat/: __init__.py  admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/core/: __init__.py  admin.py  apps.py  budget_monitor.py  exceptions.py  middleware.py  models.py  openrouter.py  throttling.py  urls.py  utils.py  views.py
backend/apps/documents/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/domain/: README.md  __init__.py  models.py
backend/apps/infrastructure/: README.md  __init__.py  config.py  container.py  feature_flags.py  pricing.py  rate_limit.py  test_container.py
backend/apps/rag/: __init__.py  apps.py  pipeline.py  processors.py  utils.py
backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  databases.py  development.py  test.py
backend/docs/: database-backup-restore.md  database-migrations.md
backend/scripts/: README.md  clean-database.bat  clean-database.sh  create-app-user.sql  init-db.sql  load-real-pdfs.bat  load-real-pdfs.sh  migrate.py  run-migrations.bat  run-migrations.sh  test-app-user-permissions.sql
frontend/: .env.local  (+7 more)
(+71 files in other folders)
